# multi-pin-roll-rs

./: Cargo.toml
src/: main.rs  multi_pin_roll.rs
src/c_src/: multi_pin_roll.cpp
